--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
     <footer>
       This project was coded by <strong>Camelia Simion</strong>, open-sourced on
-      <a href="https://github.com/simcamelia/ProjectCS" target="_blank">GitHub</a>,
+      <a href="https://github.com/simcamelia/AIJoke" target="_blank">GitHub</a>,
       and hosted on
-      <a href="https://simcam.netlify.app/" target="_blank">Netlify</a>.
+      <a href="https://csaijoke.netlify.app/" target="_blank">Netlify</a>.
     </footer>
   </div>
 
