--- a/index.html
+++ b/index.html
@@ -16,20 +16,29 @@
       align-items: center;
       height: 100vh;
     }
+
     .card {
       background: #fff;
       color: #111827;
       border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
       width: min(90%, 480px);
       padding: 32px 28px;
       text-align: center;
     }
+
     h1 {
       margin: 0 0 16px;
       font-size: 28px;
       color: #7b2ff7;
     }
+
+    p {
+      margin-bottom: 20px;
+      font-size: 16px;
+      color: #374151;
+    }
+
     input {
       width: 100%;
       padding: 12px;
@@ -38,6 +47,7 @@
       font-size: 15px;
       margin-bottom: 16px;
     }
+
     button {
       background: #7b2ff7;
       border: none;
@@ -48,7 +58,11 @@
       cursor: pointer;
       transition: background 0.25s;
     }
-    button:hover { background: #6a1bd4; }
+
+    button:hover {
+      background: #6a1bd4;
+    }
+
     #joke-output {
       min-height: 80px;
       padding: 16px;
@@ -58,17 +72,21 @@
       color: #111827;
       font-size: 17px;
       margin-top: 20px;
+      transition: all 0.2s ease-in-out;
     }
+
     footer {
       font-size: 13px;
       color: #6b7280;
       margin-top: 22px;
     }
+
     footer a {
       color: #2563eb;
       font-weight: 600;
       text-decoration: none;
     }
+
     footer a:hover {
       text-decoration: underline;
     }
@@ -80,13 +98,15 @@
     <p>Type a topic and click below for a joke!</p>
     <input id="topic" type="text" placeholder="e.g. coffee, programmers..." />
     <button id="generateBtn">Tell me a joke</button>
+
     <div id="joke-output">Your joke will appear here...</div>
 
     <footer>
-      This project was coded by <strong>Camelia Simion</strong>, open-sourced on
-      <a href="https://github.com/simcamelia/AIJoke" target="_blank">GitHub</a>,
+      This project was coded by <strong>Camelia Simion</strong>,
+      open-sourced on
+      <a href="https://github.com/simcamelia/ProjectCS" target="_blank">GitHub</a>,
       and hosted on
-      <a href="https://csaijoke.netlify.app/" target="_blank">Netlify</a>.
+      <a href="https://simcam.netlify.app/" target="_blank">Netlify</a>.
     </footer>
   </div>
 
@@ -102,11 +122,11 @@
       output.textContent = "Fetching a joke...";
 
       try {
-        // Call your Render backend endpoint
-        const url = new URL("https://aijoke.onrender.com/joke");
-        if (topic) url.searchParams.append("topic", topic);
+        // Call your Netlify Function instead of Render
+        const url = new URL("/.netlify/functions/joke", window.location.origin);
+        if (topic) url.searchParams.set("topic", topic);
 
-        const res = await fetch(url);
+        const res = await fetch(url.toString());
         const data = await res.json();
 
         if (data.joke) {
@@ -125,31 +145,5 @@
 
     btn.addEventListener("click", getJoke);
   </script>
-  <script>
-  const btn = document.getElementById("generateBtn");
-  const topicInput = document.getElementById("topic");
-  const output = document.getElementById("joke-output");
-
-  async function getJoke() {
-    const topic = topicInput.value.trim();
-    btn.disabled = true; btn.textContent = "Thinking…";
-    output.textContent = "Fetching a joke...";
-
-    try {
-      const url = new URL("/.netlify/functions/joke", window.location.origin);
-      if (topic) url.searchParams.set("topic", topic);
-      const res = await fetch(url.toString());
-      const data = await res.json();
-      output.textContent = data.joke || "No joke this time 😅";
-    } catch (err) {
-      console.error(err);
-      output.textContent = "Something went wrong 😢. Please try again.";
-    } finally {
-      btn.disabled = false; btn.textContent = "Tell me a joke";
-    }
-  }
-
-  btn.addEventListener("click", getJoke);
-</script>
 </body>
 </html>
